5 Days on It With Millions of Bugs, But It Works