@@ -12,6 +12,7 @@ import net.ltxprogrammer.changed.Changed;
 import net.ltxprogrammer.changed.init.ChangedBlocks;
 import net.ltxprogrammer.changed.recipe.PurifierRecipe;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import org.apache.commons.lang3.NotImplementedException;
@@ -27,15 +28,17 @@ public class PurifierRecipeCategory implements IRecipeCategory<PurifierRecipe> {
     public static final int WIDTH = 116;
     public static final int HEIGHT = 54;
 
+    private final IDrawable background;
     private final IDrawable icon;
     private final Component localizedName;
     private final ICraftingGridHelper craftingGridHelper;
 
     public PurifierRecipeCategory(IGuiHelper guiHelper) {
-        ResourceLocation location = ResourceLocation.fromNamespaceAndPath("jei", "textures/gui/gui_vanilla.png");
+        ResourceLocation location = new ResourceLocation("jei", "textures/gui/gui_vanilla.png");
+        background = guiHelper.createDrawable(location, 0, 60, WIDTH, HEIGHT);
         icon = guiHelper.createDrawableIngredient(VanillaTypes.ITEM_STACK, new ItemStack(ChangedBlocks.PURIFIER.get()));
-        localizedName = Component.translatable("container.changed.purifier");
-        craftingGridHelper = guiHelper.createCraftingGridHelper();
+        localizedName = new TranslatableComponent("container.changed.purifier");
+        craftingGridHelper = guiHelper.createCraftingGridHelper(craftInputSlot1);
     }
 
     @Override
@@ -44,13 +47,8 @@ public class PurifierRecipeCategory implements IRecipeCategory<PurifierRecipe> {
     }
 
     @Override
-    public int getWidth() {
-        return WIDTH;
-    }
-
-    @Override
-    public int getHeight() {
-        return HEIGHT;
+    public IDrawable getBackground() {
+        return background;
     }
 
     @Override
@@ -64,9 +62,21 @@ public class PurifierRecipeCategory implements IRecipeCategory<PurifierRecipe> {
     }
 
     @Override
+    @SuppressWarnings("removal")
+    public @NotNull ResourceLocation getUid() {
+        throw new NotImplementedException("Deprecated");
+    }
+
+    @Override
+    @SuppressWarnings("removal")
+    public @NotNull Class<? extends PurifierRecipe> getRecipeClass() {
+        throw new NotImplementedException("Deprecated");
+    }
+
+    @Override
     public void setRecipe(IRecipeLayoutBuilder builder, PurifierRecipe recipe, IFocusGroup focuses) {
         var ingredient = recipe.getIngredient();
-        craftingGridHelper.createAndSetInputs(builder, VanillaTypes.ITEM_STACK, List.of(Arrays.asList(ingredient.getItems())), 1, 1);
-        craftingGridHelper.createAndSetOutputs(builder, VanillaTypes.ITEM_STACK, List.of(new ItemStack(recipe.getResult())));
+        craftingGridHelper.setInputs(builder, VanillaTypes.ITEM_STACK, List.of(Arrays.asList(ingredient.getItems())), 1, 1);
+        craftingGridHelper.setOutputs(builder, VanillaTypes.ITEM_STACK, List.of(new ItemStack(recipe.getResult())));
     }
 }
